<resources>
    <string name="app_name">Global GPS Pong</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="toggle_sound">Toggle Sound</string>
    <string name="sign_in">Sign in</string>
    <string name="track_ball">Track Ball</string>
    <string name="user_total_hits_0">User Total Hits: 0</string>
    <string name="west_coast_score_0">West Coast Score: 0</string>
    <string name="east_coast_score_0">East Coast Score: 0</string>
    <string name="global_pong">Global Pong</string>
</resources>
